CVS code -

GNU nano 1.3.9 - 2005.10.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Fix a few last instances of the current line number's being
	  saved as an int instead of a ssize_t.  Changes to
	  renumber_all(), renumber(), do_alt_speller(), and
	  backup_lines(). (DLR)
	- Reorder some functions for consistency. (DLR)
	- Rename variable open_files openfile, for consistency. (DLR)
	- Remove renumber()'s dependency on the main filestruct.
	  Changes to renumber(); removal of renumber_all(). (DLR)
	- Restructure things so that every file has its own
	  openfilestruct, and so that the values in it are used directly
	  instead of being periodically synced up with the globals.
	  Accordingly, remove the globals.  Changes to pretty much
	  every function.  Rename add_open_file() make_new_buffer(),
	  rename load_buffer() open_buffer(), rename load_open_file()
	  display_buffer(), rename open_prevnext_file()
	  switch_to_prevnext_buffer(), rename open_prevfile_void()
	  switch_to_prev_buffer(), rename open_nextfile_void()
	  switch_to_next_buffer(), rename write_marked()
	  write_marked_file(), remove load_file(), rename cancel_fork()
	  cancel_command(), rename open_pipe() execute_command(), remove
	  execute_command(), rename resize_variables(), rename
	  global_init() window_size_init(), rename get_buffer()
	  get_key_buffer(), and rename get_buffer_len()
	  get_key_buffer_len(). (DLR)
	- Replace all mvwaddstr(hblank) calls with a new function that
	  does the same thing without the need for hblank.  New function
	  blank_line(); changes to do_browser(), blank_titlebar(),
	  blank_topbar(), blank_edit(), blank_statusbar(),
	  blank_bottombars(), update_line(), and edit_refresh(). (DLR)
	- Make the static pid variable used by execute_command() and
	  cancel_command() a pid_t instead of an int, for consistency.
	  (DLR)
	- Consistently make the flags global and any variables used to
	  hold it longs. (DLR)