@@ -291,6 +291,10 @@ void shortcut_init(bool unjustify)
     const char *nano_prevword_msg = N_("Move backward one word");
     const char *nano_wordcount_msg =
 	N_("Count the number of words, lines, and characters");
+    const char *nano_scrollprev_msg =
+	N_("Scroll up one line without scrolling the cursor");
+    const char *nano_scrollnext_msg =
+	N_("Scroll down one line without scrolling the cursor");
 #endif
 #ifndef DISABLE_JUSTIFY
     const char *nano_parabegin_msg =
@@ -543,6 +547,14 @@ void shortcut_init(bool unjustify)
     sc_init_one(&main_list, NANO_NO_KEY, N_("Word Count"),
 	IFHELP(nano_wordcount_msg, NANO_WORDCOUNT_KEY), NANO_NO_KEY,
 	NANO_NO_KEY, VIEW, do_wordlinechar_count);
+
+    sc_init_one(&main_list, NANO_NO_KEY, N_("ScrollPrev"),
+	IFHELP(nano_scrollprev_msg, NANO_SCROLLPREV_KEY), NANO_NO_KEY,
+	NANO_SCROLLPREV_ALTKEY, VIEW, do_scroll_up);
+
+    sc_init_one(&main_list, NANO_NO_KEY, N_("ScrollNext"),
+	IFHELP(nano_scrollnext_msg, NANO_SCROLLNEXT_KEY), NANO_NO_KEY,
+	NANO_SCROLLNEXT_ALTKEY, VIEW, do_scroll_down);
 #endif
 
 #ifndef DISABLE_JUSTIFY
