@@ -360,13 +360,17 @@ typedef struct rcoption {
 #define NANO_ALT_SPACE ' '
 #define NANO_ALT_LPAREN '('
 #define NANO_ALT_RPAREN ')'
+#define NANO_ALT_PLUS '+'
 #define NANO_ALT_COMMA ','
+#define NANO_ALT_MINUS '-'
 #define NANO_ALT_PERIOD '.'
 #define NANO_ALT_9 '9'
 #define NANO_ALT_0 '0'
 #define NANO_ALT_LCARAT '<'
+#define NANO_ALT_EQUALS '='
 #define NANO_ALT_RCARAT '>'
 #define NANO_ALT_RBRACKET ']'
+#define NANO_ALT_USCORE '_'
 #define NANO_ALT_A 'a'
 #define NANO_ALT_B 'b'
 #define NANO_ALT_C 'c'
@@ -473,6 +477,10 @@ typedef struct rcoption {
 #define NANO_NEXTWORD_KEY	NANO_CONTROL_SPACE
 #define NANO_PREVWORD_KEY	NANO_ALT_SPACE
 #define NANO_WORDCOUNT_KEY	NANO_ALT_D
+#define NANO_SCROLLPREV_KEY	NANO_ALT_MINUS
+#define NANO_SCROLLNEXT_KEY	NANO_ALT_PLUS
+#define NANO_SCROLLPREV_ALTKEY	NANO_ALT_USCORE
+#define NANO_SCROLLNEXT_ALTKEY	NANO_ALT_EQUALS
 #define NANO_CUTTILLEND_KEY	NANO_CONTROL_X
 #define NANO_CUTTILLEND_ALTKEY	NANO_ALT_T
 #define NANO_PARABEGIN_KEY	NANO_CONTROL_W
