@@ -1,4 +1,10 @@
 CVS code -
+- General:
+	- Add the ability to scroll up or down single lines without
+	  scrolling the cursor, via Meta-- and Meta-+.  Note that this
+	  is disabled when NANO_SMALL is defined.  New functions
+	  do_scroll_up() and do_scroll_down(); changes to
+	  shortcut_init(). (DLR, suggested by Mike Frysinger)
 
 GNU nano 1.3.9 - 2005.10.23
 - General:
